# sglavoie.github.io

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  404.html  404.md  CNAME  LICENSE  My-first-post.html  README.md  about.html  archives.html  authors.html  automation.html  categories.html  contact.html  github.html  hackerrank.html  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html  learning-process.html  learning-progress-2018-earlier.html  learning-progress-2019.html  learning-progress-2020.html  learning-progress-2021.html  learning-progress.html  linkedin.html  pagefind.yaml  pelicanconf.py  publish.sh  publishconf.py  pyproject.toml  redirects_generated.txt  (+12 more)
author/: sebastien-lavoie.html  sebastien-lavoie2.html  sebastien-lavoie3.html  sebastien-lavoie4.html  sebastien-lavoie5.html  sebastien-lavoie6.html  sebastien-lavoie7.html  sebastien-lavoie8.html  sebastien-lavoie9.html
category/: automation.html  automation2.html  first.html  learnings.html  learnings2.html  learnings3.html  products.html  tips-and-tricks.html  tips-and-tricks2.html  tools.html  tools2.html  workflow.html  workflow2.html
config_helpers/: html_template.html  redirects.csv
drafts/: a-retrospective-on-creating-an-impractical-little-tool-just-for-fun.html  git-the-gist-of-it-common-commands-for-a-working-workflow.html  none.html  suckless-minimalist-tools-that-work-great.html  using-dmenu-to-optimize-common-tasks.html  using-google-sheets-as-a-database-to-extract-data-converted-to-markdown.html  using-i3-as-a-window-manager-for-increased-productivity.html
feeds/: all.atom.xml  automation.atom.xml  automation.rss.xml  first.atom.xml  learnings.atom.xml  learnings.rss.xml  sglavoie.atom.xml  sglavoie.rss.xml  tips-and-tricks.atom.xml  tips-and-tricks.rss.xml  tools.atom.xml  tools.rss.xml  workflow.atom.xml  workflow.rss.xml
pagefind/: pagefind-entry.json  (+12 more)
pages/: about.html  (+1 more)
(+514 files in other folders)
