[build-system]
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "sglavoie-website"
description = "sglavoie's personal website"
version = "2.0.0"
authors = ["Sébastien Lavoie"]
license = "MIT"
readme = "README.md"

[tool.black]
exclude = ".venv"
include = "\\.pyi?$"
line-length = 88
target-version = ["py310"]

[tool.poetry.dependencies]
python = "~3.11"
beautifulsoup4 = "^4.12.2"
blinker = "^1.7.0"
docutils = "^0.20.1"
feedgenerator = "^2.1.0"
ghp-import = "^2.1.0"
invoke = "^2.2.0"
jinja2 = "^3.1.2"
livereload = "^2.6.3"
markdown = "^3.5.1"
markupsafe = "^2.1.3"
pelican = "^4.9.1"
pelican-render-math = "^1.0.3"
pelican-tag-cloud = "^1.0.1"
pygments = "^2.17.2"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
six = "^1.16.0"
smartypants = "^2.0.1"
typogrify = "^2.0.7"
unidecode = "^1.3.7"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.building.pip]
backend = "setuptools.build_meta"
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]

[tool.building.poetry]
backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pylint = "^3.0.3"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
