[project]
name = "sglavoie.com"
version = "0.0.1"
dependencies = [
    "pelican>=4.11.0",
    "pelican-tag-cloud>=1.0.1",
    "pelican-render-math>=1.0.4",
    "markdown>=3.7",
    "livereload>=2.7.1",
    "ghp-import>=2.1.0",
    "invoke>=2.2.0",
    "beautifulsoup4>=4.13.3",
    "toml>=0.10.2",
    "typogrify>=2.1.0",
]
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.2",
    "mypy>=1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
